# SayayinShell

./: .directory  CMakeLists.txt  README  SayayinShell.kdev4  sayayinShell.files  sayayinShell.includes
.kdev4/: SayayinShell.kdev4
doc/: CMakeLists.txt  index.docbook
src/: CMakeLists.txt  Messages.sh  confbasedatos.cpp  confbasedatos.h  config.cpp  config.h  confsettings.cpp  confsettings.h  frmprincipal.cpp  frmprincipal.h  konsole.cpp  konsole.h  main.cpp  sayayinshell.cpp  sayayinshell.cpp~  sayayinshell.desktop  sayayinshell.h  sayayinshell.kcfg  sayayinshell_part.cpp  sayayinshell_part.desktop  sayayinshell_part.h  sayayinshell_part.rc  sayayinshell_shell.rc  settings.kcfgc
src/ui/: CMakeLists.txt  frmprincipal.ui
